# bochscpu-python

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: Invoke-VisualStudio.ps1  build-bochscpu.bat  build-bochscpu.ps1  build-bochscpu.sh
.github/workflows/: build.yml
bochscpu/: bochscpu.hpp
bochscpu/lib/: README.md
docs/: README.md  bochscpu.Hook.md  gallery.md
docs/api/: bochscpu.Hook.md  bochscpu.InstructionType.md  bochscpu.Segment.md  bochscpu.Session.md  bochscpu.State.md  bochscpu._bochscpu.md
examples/: fib.py  inc_rax_long_mode.py  long_mode_emulate_linux_udump.py  long_mode_emulate_windows_kdump.py  long_mode_emulate_windows_udump.py  long_mode_fibonacci.py  real_mode_print_hello.py  real_mode_print_hello_workd.py  real_mode_print_hello_world.py  template.py
python/: CMakeLists.txt  requirements.txt
python/bochscpu/: __init__.py  utils.py
python/bochscpu-stubs/: __init__.pyi  cpu.pyi  memory.pyi
python/bochscpu/_bochscpu/: __init__.pyi
python/bochscpu/_bochscpu/cpu/: __init__.pyi
python/bochscpu/_bochscpu/memory/: __init__.pyi
python/bochscpu/cpu/: __init__.py
python/bochscpu/memory/: __init__.py
python/bochscpu/utils/: __init__.py  callbacks.py  cpu.py
python/inc/: bochscpu.hpp
python/src/: bochscpu.cpp  bochscpu_callbacks.cpp  bochscpu_cpu.cpp  bochscpu_mem.cpp
python/stubs/bochscpu/: __init__.pyi  cpu.pyi  memory.pyi
